// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Component loads the account page when clicked 1`] = `
<body>
  <div>
    <div
      class="App"
    >
      <nav
        class="Nav"
      >
        <a
          href="/"
        >
          Home
        </a>
        <a
          aria-current="page"
          class="active"
          href="/users/1"
        >
          Account
        </a>
      </nav>
      <main
        class="UserPage"
      >
        <header>
          <h1>
            User1
          </h1>
        </header>
        <p>
          Email: 
          user1@gmail.com
        </p>
        <section
          class="PostsList"
        >
          <header>
            <h2>
              Posts
            </h2>
          </header>
          <ul>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/4"
              >
                Cooking Basics for Beginners
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Jan 05 2021 08:28:28
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/2"
              >
                How to Save Money When Cooking
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Dec 28 2020 18:24:43
              </p>
            </li>
          </ul>
        </section>
        <section
          class="UserCommentsList"
        >
          <header>
            <h2>
              Comments
            </h2>
          </header>
          <ul>
            <li
              class="Comment"
            >
              <a
                class="Comment__post-title"
                href="/blog-posts/1"
              >
                Lessons I Learned from Cooking
              </a>
              <p
                class="Comment__content"
              >
                These are all great lessons!
              </p>
              <p
                class="timestamp"
              >
                Last edited: 
                Dec 19 2020 07:37:16
              </p>
            </li>
            <li
              class="Comment"
            >
              <a
                class="Comment__post-title"
                href="/blog-posts/5"
              >
                Winter Seasoning Guide
              </a>
              <p
                class="Comment__content"
              >
                I can't wait to try these seasoning combinations in my next meal!
              </p>
              <p
                class="timestamp"
              >
                Last edited: 
                Dec 17 2020 08:37:52
              </p>
            </li>
          </ul>
        </section>
      </main>
    </div>
  </div>
</body>
`;

exports[`Nav Component loads the homepage when clicked 1`] = `
<body>
  <div>
    <div
      class="App"
    >
      <nav
        class="Nav"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          Home
        </a>
        <a
          href="/users/1"
        >
          Account
        </a>
      </nav>
      <main
        class="Home"
      >
        <header>
          <h1>
            Welcome to the Cooking Blog!
          </h1>
        </header>
        <p>
          Ever wanted to learn more about cooking, or share your experiences with others? Here you can read all kinds of posts from other users: things they've tried, things they want to try, recipes, cooking tips, etc. And if you create an account you can make posts of your own, and leave comments on posts.
        </p>
        <section
          class="PostsList"
        >
          <header>
            <h2>
              Posts
            </h2>
          </header>
          <ul>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/8"
              >
                Title8
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Jan 06 2021 12:22:39
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/6"
              >
                Title6
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Jan 05 2021 14:22:39
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/4"
              >
                Cooking Basics for Beginners
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Jan 05 2021 08:28:28
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/11"
              >
                Title11
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Jan 04 2021 18:22:39
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/7"
              >
                Title7
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Jan 02 2021 16:22:39
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/2"
              >
                How to Save Money When Cooking
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Dec 28 2020 18:24:43
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/1"
              >
                Lessons I Learned from Cooking
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Dec 17 2020 07:37:16
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/10"
              >
                Title10
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Dec 15 2020 19:22:39
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/5"
              >
                Winter Seasoning Guide
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Dec 15 2020 11:56:48
              </p>
            </li>
            <li
              class="PostsList__blog-post"
            >
              <a
                class="PostsList__title"
                href="/blog-posts/9"
              >
                Title9
              </a>
              <p
                class="timestamp"
              >
                Last edited: 
                Dec 15 2020 11:22:39
              </p>
            </li>
          </ul>
          <div
            class="TransitionButtons"
          >
            <button
              class="TransitionButtons__prev"
              disabled=""
              type="button"
            >
              Previous
            </button>
            <button
              class="TransitionButtons__next"
              type="button"
            >
              Next
            </button>
          </div>
        </section>
      </main>
    </div>
  </div>
</body>
`;
